objects/ASI_CRM_Contract_Outlets__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_Contract_End_Date__c</fullName>
        <formula>ASI_CRM_SG_Contract__r.ASI_TH_CRM_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contract_Start_Date__c</fullName>
        <formula>ASI_CRM_SG_Contract__r.ASI_TH_CRM_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contract_Status__c</fullName>
        <formula>text(ASI_CRM_SG_Contract__r.ASI_TH_CRM_Contract_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Outlets</relationshipLabel>
        <relationshipName>Contract_Outlets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Contract - Parent Outlet</relationshipLabel>
        <relationshipName>Contract_Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Outlet</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Contract Outlets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Outlets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Outlet</fullName>
        <active>true</active>
        <label>ASI CRM SG Contract Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Outlet_Simulation</fullName>
        <active>true</active>
        <label>ASI CRM SG Contract Outlet Simulation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>